# 42_minishell

./: CMakeLists.txt  MakeFile  Makefile  a.out  a.txt  ls  main.c  mainheader.h  mini_shell  minishell.h  t  txt.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
builtin_func/: builtin_execution.c  cd.c  echo.c  env.c  env_parsing_func.c  exit.c  export.c  export_check_and_do.c  export_check_validated.c  export_do_export.c  export_with_no_args.c  export_with_no_args_utils.c  pwd.c  unset.c
execute/: executing.c  executing_bin.c  executing_utils.c  free_executing_params.c  normal_executing.c  pipe_executing.c  pipe_utils.c  redirect_executing.c
executing/: .gitignore  CMakeLists.txt  MAKEFILE  Reference.md  builtin_execution.c  cd.c  cmd_func.c  echo.c  env.c  env_add_end_value.c  env_parsing_func.c  execute_bin.c  executing.c  executing.h  exit.c  export.c  export_add_env.c  export_add_no_value.c  export_change_value.c  export_check_and_do.c  export_check_validated.c  export_copy_utils.c  export_plus.c  export_print_utils.c  export_sort_utils.c  export_with_no_args.c  free_env.c  ft_strcmp.c  main.c  print_error.c  pwd.c  size_func.c  test.md  unset.c  value_utils.c
executing/builtin_func/: cd.c  echo.c  env.c  env_parsing_func.c  exit.c  export.c  export_do_export.c  export_with_no_args.c  pwd.c
executing/execute/: executing.c  executing_bin.c  executing_utils.c  free_executing_params.c  normal_executing.c  pipe_executing.c  pipe_utils.c  redirect_executing.c
executing/parse/: check_operators.c  check_redir_error.c  check_syntax.c  ckeck_quote.c  error_print.c  handler_env.c  handler_linked_list.c  init.c  make_nodes.c  parsing.h  parsing_utils.c  redir.c  signal_hanlder.c  syntax_utils.c  test.c  tokeniz.c
executing/utils/: free_env.c  print_error.c  size_func.c  value_utils.c
libft/: ft_putstr_fd.c  ft_strdup.c
libs/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libs/libft/: ft_itoa.c  ft_strlen.c  libft.h
parse/: check_operators.c  check_redir_error.c  check_syntax.c  ckeck_quote.c  error_print.c  handler_env.c  handler_linked_list.c  init.c  make_nodes.c  parsing_utils.c  redir.c  signal_hanlder.c  test.c  tokeniz.c
parsing/: check_operators.c  check_pipes.c  ckeck_quote.c  error_print.c  handler_env.c  handler_linked_list.c  init.c  linked_list_handler.c  make_nodes.c  paring_utils.c  parsing.h  parsing_main.c  parsing_utils.c  signal_hanlder.c  test.c  tokeniz.c
utils/: free_env.c  ft_strcmp.c  print_error.c  size_func.c  value_utils.c
